--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-appdirs==1.4.0s
+appdirs==1.4.0
+avro==1.8.1
+click==6.7
+Flask==0.12
+itsdangerous==0.24
+Jinja2==2.9.5
 kafka==1.3.2
+kafka-python==1.3.2
+MarkupSafe==0.23
+numpy==1.12.0
+opencv-python==3.2.0.6
 packaging==16.8
 pyparsing==2.1.10
 six==1.10.0
+Werkzeug==0.11.15
